# gpui-component

./: Cargo.toml  README.md
assets/keymaps/: default.json
crates/app/: Cargo.toml
crates/app/src/: assets.rs  main.rs  story_workspace.rs
crates/story/: Cargo.toml
crates/story/examples/: chartooltip.rs  dock1.rs  switch1.rs
crates/story/src/: chartooltip_story.rs  helloworld_story.rs  lib.rs  switch1_story.rs  table_story.rs  tooltip_story.rs
crates/ui/: Cargo.toml  Readme.md
crates/ui/src/: button.rs  colors.rs  lib.rs
crates/ui/src/dock/: tab_panel.rs
