[package]
name = "ui"
description = "UI components for the GPUI"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
gpui.workspace = true
anyhow = "1"
itertools = "0.13.0"
serde = "1.0.203"
serde_json = "1"
smallvec = "1.13.2"
unicode-segmentation = "1.11.0"
paste = "1"
once_cell = "1.19.0"
smol = "1"
regex = "1"
rust-i18n = "3"

[lints]
workspace = true
